--- a/resources/assets/sass/webapp.scss
+++ b/resources/assets/sass/webapp.scss
@@ -31,9 +31,18 @@ $theme-color-main: #2196F3;
 $toolbar-min-height: 64px;
 
 // Animation
-@keyframes section-fadein {
+@keyframes fadein {
   from {opacity: 0}
   to {opacity: 1}
+}
+
+@keyframes fadeout {
+  from {
+    opacity: 1
+  }
+  to {
+    opacity: 0
+  }
 }
 
 // Man Application section
@@ -58,6 +67,25 @@ html, body, #app {
 #app {
   @include flex-box;
   flex-flow: column;
+}
+
+.app-hide {
+  opacity: 1;
+  @include full-size;
+}
+
+.app-show-animation {
+  width: 0;
+  height: 0;
+  transition: width, height;
+  transition-delay: 400ms;
+  animation: fadeout 400ms ease-in forwards;
+}
+
+#app-splash {
+  position: absolute;
+  background: #2196f3;
+  z-index: 100;
 }
 
 #app-search{
@@ -182,7 +210,7 @@ html, body, #app {
 #app-news-add, #app-news-view, #app-account-login, #app-account-register {
   @include overlay(10);
   background: #fff;
-  animation: section-fadein 300ms cubic-bezier(0.4, 0.0, 0.2, 1);
+  animation: fadein 300ms cubic-bezier(0.4, 0.0, 0.2, 1);
 }
 
 .app-overlay-container {
@@ -206,4 +234,22 @@ html, body, #app {
   outline: 0;
   line-height: normal;
   text-decoration: none;
+}
+
+.input-helper-text {
+  display: block;
+  margin-top: -20px;
+  color: gray;
+  font-size: 12px;
+}
+
+.input-chip-adjust-padding {
+  input {
+    padding-top: 12px;
+  }
+}
+
+.image-responsive-default {
+  width: 100%;
+  max-height: 56.5vmin;
 }
