--- a/resources/assets/sass/webapp.scss
+++ b/resources/assets/sass/webapp.scss
@@ -119,7 +119,7 @@ html, body, #app {
 }
 
 #sidebar-section > .md-sidenav-content{
-  transition-duration: 0.25s;
+  //transition-duration: 0.25s;
 }
 
 .main-content {
@@ -250,6 +250,5 @@ html, body, #app {
 }
 
 .image-responsive-default {
-  width: 100%;
-  max-height: 56.5vmin;
+  max-width: 100%;
 }
